k8s/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-app
  labels:
    app: python-app
spec:
  selector:
    matchLabels:
      app: python-app
  replicas: 1
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: python-app
    spec:
      containers:
      - name: python-app
        image: farbreaker/flask:0.0.2
        ports:
        - containerPort: 3000
