k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-service
spec:
  selector:
    app: python-app
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 3000
  type: ClusterIP
